--- a/.github/workflows/run_script.yaml
+++ b/.github/workflows/run_script.yaml
@@ -2,9 +2,8 @@ name: Run Script
 
 on:
   workflow_dispatch:
-  push:
-    branches:
-      - "main"
+  schedule:
+    - cron: "0 17 * * 0-6"
 
 jobs:
   build:
@@ -18,11 +17,10 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
-      # - name: Install dependencies
-      #   run: |
-      #     python -m pip install --upgrade pip
-      #     pip install flake8 pytest
-      #     if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+      - name: Pip Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       # - name: Lint with flake8
       #   run: |
       #     # stop the build if there are Python syntax errors or undefined names
@@ -32,5 +30,5 @@ jobs:
       # - name: Test with pytest
       #   run: |
       #     pytest
-      - name: Run Script
-        run: python bot.py
+      - name: Run Meet and Greet Bot Script
+        run: python main.py
