--- a/.github/workflows/run_script.yaml
+++ b/.github/workflows/run_script.yaml
@@ -30,5 +30,10 @@ jobs:
       # - name: Test with pytest
       #   run: |
       #     pytest
+      - name: Export secrets
+        run: |
+          export BOT_TOKEN= {{ secrets.BOT_TOKEN }}
+          export CHANNEL={{ secrets.CHANNEL}}
+          export ADMIN_TOKEN={{ secrets.ADMIN_TOKEN }}
       - name: Run Meet and Greet Bot Script
         run: python main.py
