--- a/.github/workflows/run_script.yaml
+++ b/.github/workflows/run_script.yaml
@@ -3,7 +3,7 @@ name: Meet and Greet
 on:
   workflow_dispatch:
   schedule:
-    - cron: "0 17 * * 0-6"
+    - cron: "0 17 * * 1"
 
 jobs:
   build:
