--- a/.github/workflows/run_script.yaml
+++ b/.github/workflows/run_script.yaml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: [3.8]
+        python-version: [3.9]
     steps:
       - uses: actions/checkout@v2
       - name: Set up Python ${{ matrix.python-version }}
@@ -19,7 +19,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Pip Install dependencies
         run: |
-          python -m pip install --upgrade pip
+          cd meet-greet
+          python -m pip install -U pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       # - name: Lint with flake8
       #   run: |
@@ -31,7 +32,7 @@ jobs:
       #   run: |
       #     pytest
       - name: Run Meet and Greet Bot Script
-        run: python main.py
+        run: pwd && cd meet-greet && python main.py
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           CHANNEL: ${{ secrets.CHANNEL }}
