--- a/.github/workflows/meet-greet-script.yaml
+++ b/.github/workflows/meet-greet-script.yaml
@@ -32,7 +32,7 @@ jobs:
       #   run: |
       #     pytest
       - name: Run Meet and Greet Bot Script
-        run: cd meet-greet && python test.py
+        run: cd meet-greet && python main.py
         env:
           BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
           CHANNEL: ${{ secrets.CHANNEL }}
